JAX-RS: Properly "pass through" `WebApplicationException` (#6584)
fixes #6569